--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,3 +2,13 @@ baseURL: https://example.org/
 languageCode: en-us
 title: My New Hugo Site
 theme: PaperMod
+params:
+  homeInfoParams:
+    Title: Hi there! 👋
+    Content: |
+      Welcome to my blog!
+
+  socialIcons:
+    - name: github
+      title: GitHub
+      url: https://github.com/xubinh
