Create a bunch of empty test posts

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -4,7 +4,7 @@ title: xubinh's blog
 theme: PaperMod
 params:
   homeInfoParams:
-    Title: Hi there! 👋
+    Title: Hi there 👋
     Content: |
       Welcome to my blog!
 
