--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,7 +2,10 @@ baseURL: https://example.org/
 title: xubinh's blog
 copyright: "© 2024 [xubinh's blog](https://xubinh.github.io/) All rights reserved."
 languageCode: zh-cn
+paginate: 5
+paginatePath: page
 theme: PaperMod
+
 menu:
   main:
     - name: 所有文章
