Fix problem of posts not showing by adding items to mainSections config

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,7 +5,7 @@ languageCode: zh-cn
 paginate: 5
 paginatePath: page
 theme: PaperMod
-mainSections: ["posts"]
+mainSections: ["posts", "posts/csapp"]
 enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: false
