Add math rendering, fix problems of math rendering, and delete .hugo_build.lock from git index

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,6 +24,7 @@ outputs:
     - JSON
 
 taxonomies:
+  category: categories
   tag: tags
   series: series
 
@@ -58,6 +59,7 @@ params:
   ShowToc: true
   comments: false
   # images: ["images/papermod-cover.png"]
+  math: true
 
   defaultTheme: auto
   disableThemeToggle: false
