--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,7 @@
 baseURL: https://example.org/
 title: xubinh's blog
 copyright: "© 2024 [xubinh's blog](https://xubinh.github.io/) All rights reserved."
+defaultContentLanguage: zh
 languageCode: zh-cn
 paginate: 5
 paginatePath: page
