--- a/hugo.yaml
+++ b/hugo.yaml
@@ -63,7 +63,7 @@ params:
   ShowAllPagesInArchive: true
   ShowToc: true
   comments: false
-  math: true
+  # math: true
   # images: ["images/papermod-cover.png"]
 
   defaultTheme: auto
