Add support for GitHub's Alert Markdown extension

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,7 +5,7 @@ defaultContentLanguage: zh
 languageCode: zh-cn
 paginate: 5
 paginatePath: page
-theme: PaperMod
+theme: ["hugo-notice", "PaperMod"]
 mainSections: ["posts"]
 enableInlineShortcodes: true
 enableRobotsTXT: true
