Finish xv6 textbook note chapter 1, and enable building of draft posts

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,7 +9,7 @@ theme: ["hugo-notice", "PaperMod"]
 mainSections: ["posts"]
 enableInlineShortcodes: true
 enableRobotsTXT: true
-buildDrafts: false
+buildDrafts: true
 buildFuture: false
 buildExpired: false
 enableEmoji: true
