Fix half-width double quotes

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -137,6 +137,9 @@ markup:
             - - $
               - $
         enable: true
+      typographer:
+        leftDoubleQuote: '"'
+        rightDoubleQuote: '"'
     renderer:
       unsafe: true
   highlight:
