Disable goldmark typographer config for fixing quotation issues

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -138,10 +138,7 @@ markup:
               - $
         enable: true
       typographer:
-        LeftSingleQuote: "'"
-        RightSingleQuote: "'"
-        leftDoubleQuote: '"'
-        rightDoubleQuote: '"'
+        disable: true
     renderer:
       unsafe: true
   highlight:
