--- a/hugo.yaml
+++ b/hugo.yaml
@@ -78,6 +78,8 @@ params:
     Title: 你好! 👋
     Content: |
       欢迎来到我的博客.
+      
+      我的文章目前主要集中在计算机科学与技术, 数学, 以及人工智能与深度学习这几个领域, 具体可以在 [tags 页面](/tags/)中进行查看~
 
   socialIcons:
     - name: github
