Update welcome page

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -77,9 +77,7 @@ params:
   homeInfoParams:
     Title: 你好! 👋
     Content: |
-      欢迎来到我的博客.
-      
-      我的文章目前主要集中在计算机科学与技术, 数学, 以及人工智能与深度学习这几个领域, 具体可以在 [tags 页面](/tags/)中进行查看~
+      欢迎你来到我的博客. 我的文章目前主要集中在 (1) 计算机科学与技术, (2) 数学, 以及 (3) 人工智能与深度学习 (扩散模型为主) 等领域, 具体关键词可以在 [Tag](/tags/) 页面中进行查看~
 
   socialIcons:
     - name: github
